--- a/NSU College Portal/Site.Master
+++ b/NSU College Portal/Site.Master
@@ -50,9 +50,11 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/ChooseASubject">Choose A Subject</a></li>
+                        <li><a runat="server" href="~/ChooseACourse">Choose A Course</a></li>
+                        <li><a runat="server" href="~/CoursePage">Course Page</a></li>
+                        <li><a runat="server" href="~/BrowseAll">Browse All</a></li>
+                        <li><a runat="server" href="~/Forum">Forum</a></li>
                     </ul>
                 </div>
             </div>
